--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html{
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto' , sans-serif;
   height: 100%;
   min-height: 100%;
 }
@@ -13,8 +13,8 @@ body {
 #root {
   display: flex;
   flex-direction: column;
+  align-items: center;
   min-height: 100%;
   background-image: linear-gradient(to right bottom, #476fb6, #008bca, #00a5ce, #00bbc2, #26cfac);
-  padding: 40px;
   color: white;
 }
